ajout du js de l'ancien projet

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div id="owl-slider" class="owl-carousel">
     <div class="item">
-      <img src="<?php bloginfo('template_url'); ?>/img/slider.png" alt="slider">
+      <%= image_tag("slider.png") %>
       <div>
         <p class="title-slider">Slider</p>
         <p class="content-slider">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
