--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -49,11 +49,13 @@
 </footer>
 <div class="footer-credits container-fluid">
   <div class="row">
-    <div class="col-xs-24 col-md-offset-2 col-md-6 footer-logo"><img src="<?php bloginfo('template_url'); ?>/img/logo.png"></div>
-      <div class="col-xs-24 col-md-8 footer-other-link">
-        <a href="http://blog.climateriaux.fr">Blog</a> | Condition général d’utilisation & de vente | Mentions légales | Contact
-      </div>
-      <div class="col-xs-24 col-md-6 footer-copyright">Copyright 2016 - Climatériaux</div>
+    <div class="col-xs-24 col-md-offset-2 col-md-6 footer-logo">
+      <%= image_tag("logo.png") %>
+    </div>
+    <div class="col-xs-24 col-md-8 footer-other-link">
+      <a href="http://blog.climateriaux.fr">Blog</a> | Condition général d’utilisation & de vente | Mentions légales | Contact
+    </div>
+    <div class="col-xs-24 col-md-6 footer-copyright">Copyright 2016 - Climatériaux</div>
     </div>
   </div>
 </div>
