--- a/app/views/home/_svg.html.erb
+++ b/app/views/home/_svg.html.erb
@@ -19,7 +19,7 @@
         </clipPath>
         <g style="clip-path:url(#SVGID_2_);">
           
-            <image style="overflow:visible;" width="321" height="322" id="Rectangle_31__x2B__Rectangle_28_copie_5_xA0_Image_8_" xlink:href="<?php bloginfo('template_url'); ?>/svg/FD9D50AD418C638B.png"  transform="matrix(0.5109 0 0 0.5081 1.6157 2.9662)">
+            <image style="overflow:visible;" width="321" height="322" id="Rectangle_31__x2B__Rectangle_28_copie_5_xA0_Image_8_" xlink:href="<%= asset_path "svg/FD9D50AD418C638B.png" %>"  transform="matrix(0.5109 0 0 0.5081 1.6157 2.9662)">
           </image>
         </g>
       </g>
@@ -113,7 +113,7 @@
           </clipPath>
           <g style="clip-path:url(#SVGID_4_);">
             
-              <image style="overflow:visible;" width="322" height="322" id="Rectangle_31__x2B__Rectangle_28_copie_5_xA0_Image_7_" xlink:href="<?php bloginfo('template_url'); ?>/svg/FD9D50AD418C6389.png"  transform="matrix(0.5217 0 0 0.5217 77.983 82.483)">
+              <image style="overflow:visible;" width="322" height="322" id="Rectangle_31__x2B__Rectangle_28_copie_5_xA0_Image_7_" xlink:href="<%= asset_path "svg/FD9D50AD418C6389.png" %>" transform="matrix(0.5217 0 0 0.5217 77.983 82.483)">
             </image>
           </g>
         </g>
@@ -126,7 +126,7 @@
         </g>
         <g id="Objet_dynamique_vectoriel_xA0_Image_9_">
           
-            <image style="display:none;overflow:visible;" width="25" height="27" id="Objet_dynamique_vectoriel_xA0_Image_8_" xlink:href="<?php bloginfo('template_url'); ?>/svg/FD9D50AD418C638F.png"  transform="matrix(0.5 0 0 0.5 157.5 143.5)">
+            <image style="display:none;overflow:visible;" width="25" height="27" id="Objet_dynamique_vectoriel_xA0_Image_8_" xlink:href="<%= asset_path "svg/FD9D50AD418C638F.png" %>"  transform="matrix(0.5 0 0 0.5 157.5 143.5)">
           </image>
           <g>
             <path class="st2" d="M159.737,149.914l-1,1c-0.3,0.3-0.3,0.7,0,0.9l1.3,1.3l-3,3c-0.5,0.5-0.5,1.3,0,1.7c0.5,0.5,1.3,0.5,1.7,0
@@ -174,7 +174,7 @@
           </clipPath>
           <g style="clip-path:url(#SVGID_6_);">
             
-              <image style="overflow:visible;" width="322" height="322" id="Rectangle_31__x2B__Rectangle_28_copie_5_xA0_Image_6_" xlink:href="<?php bloginfo('template_url'); ?>/svg/FD9D50AD418C6388.png"  transform="matrix(0.5061 0 0 0.5061 163.4322 165.9322)">
+              <image style="overflow:visible;" width="322" height="322" id="Rectangle_31__x2B__Rectangle_28_copie_5_xA0_Image_6_" xlink:href="<%= asset_path "svg/FD9D50AD418C6388.png" %>"  transform="matrix(0.5061 0 0 0.5061 163.4322 165.9322)">
             </image>
           </g>
         </g>
@@ -187,7 +187,7 @@
         </g>
         <g id="Objet_dynamique_vectoriel_copie_xA0_Image_1_">
           
-            <image style="display:none;overflow:visible;" width="22" height="23" id="Objet_dynamique_vectoriel_copie_xA0_Image" xlink:href="<?php bloginfo('template_url'); ?>/svg/FD9D50AD418C6386.png"  transform="matrix(0.5 0 0 0.5 239.5 227.5)">
+            <image style="display:none;overflow:visible;" width="22" height="23" id="Objet_dynamique_vectoriel_copie_xA0_Image" xlink:href="<%= asset_path "svg/FD9D50AD418C6386.png" %>"  transform="matrix(0.5 0 0 0.5 239.5 227.5)">
           </image>
           <g id="Calque_52">
             <polygon class="st2" points="245.983,227.976 238.883,227.976 238.883,226.076 245.983,226.076 247.083,226.976          "/>
@@ -275,7 +275,7 @@
           </clipPath>
           <g style="clip-path:url(#SVGID_8_);">
             
-              <image style="overflow:visible;" width="322" height="322" id="Rectangle_31__x2B__Rectangle_28_copie_5_xA0_Image_5_" xlink:href="<?php bloginfo('template_url'); ?>/svg/FD9D50AD418C6387.png"  transform="matrix(0.5087 0 0 0.5087 162.5875 3.1157)">
+              <image style="overflow:visible;" width="322" height="322" id="Rectangle_31__x2B__Rectangle_28_copie_5_xA0_Image_5_" xlink:href="<%= asset_path "svg/FD9D50AD418C6387.png" %>"  transform="matrix(0.5087 0 0 0.5087 162.5875 3.1157)">
             </image>
           </g>
         </g>
@@ -331,7 +331,7 @@
           </clipPath>
           <g style="clip-path:url(#SVGID_10_);">
             
-              <image style="overflow:visible;" width="322" height="322" id="Rectangle_31__x2B__Rectangle_28_copie_5_xA0_Image_4_" xlink:href="<?php bloginfo('template_url'); ?>/svg/FD9D50AD418C6397.png"  transform="matrix(0.5184 0 0 0.5184 242.9827 83.4827)">
+              <image style="overflow:visible;" width="322" height="322" id="Rectangle_31__x2B__Rectangle_28_copie_5_xA0_Image_4_" xlink:href="<%= asset_path "svg/FD9D50AD418C6397.png" %>"  transform="matrix(0.5184 0 0 0.5184 242.9827 83.4827)">
             </image>
           </g>
         </g>
@@ -442,7 +442,7 @@
           </clipPath>
           <g style="clip-path:url(#SVGID_12_);">
             
-              <image style="overflow:visible;" width="322" height="322" id="Rectangle_31__x2B__Rectangle_28_copie_5_xA0_Image_3_" xlink:href="<?php bloginfo('template_url'); ?>/svg/FD9D50AD418C6399.png"  transform="matrix(0.5 0 0 0.5 326 4.5)">
+              <image style="overflow:visible;" width="322" height="322" id="Rectangle_31__x2B__Rectangle_28_copie_5_xA0_Image_3_" xlink:href="<%= asset_path "svg/FD9D50AD418C6399.png" %>"  transform="matrix(0.5 0 0 0.5 326 4.5)">
             </image>
           </g>
         </g>
@@ -526,7 +526,7 @@
           </clipPath>
           <g style="clip-path:url(#SVGID_14_);">
             
-              <image style="overflow:visible;" width="322" height="322" id="Rectangle_31__x2B__Rectangle_28_copie_5_xA0_Image_2_" xlink:href="<?php bloginfo('template_url'); ?>/svg/FD9D50AD418C639B.png"  transform="matrix(0.5186 0 0 0.5186 321.9982 162.4982)">
+              <image style="overflow:visible;" width="322" height="322" id="Rectangle_31__x2B__Rectangle_28_copie_5_xA0_Image_2_" xlink:href="<%= asset_path "svg/FD9D50AD418C639B.png" %>"  transform="matrix(0.5186 0 0 0.5186 321.9982 162.4982)">
             </image>
           </g>
         </g>
@@ -652,7 +652,7 @@
           </clipPath>
           <g style="clip-path:url(#SVGID_16_);">
             
-              <image style="overflow:visible;" width="322" height="322" id="Rectangle_31__x2B__Rectangle_28_copie_5_xA0_Image_1_" xlink:href="<?php bloginfo('template_url'); ?>/svg/A7BCA90A794A6328.png"  transform="matrix(0.5124 0 0 0.5124 405.4991 83.9991)">
+              <image style="overflow:visible;" width="322" height="322" id="Rectangle_31__x2B__Rectangle_28_copie_5_xA0_Image_1_" xlink:href="<%= asset_path "svg/A7BCA90A794A6328.png" %>"  transform="matrix(0.5124 0 0 0.5124 405.4991 83.9991)">
             </image>
           </g>
         </g>
@@ -745,7 +745,7 @@
           </clipPath>
           <g style="clip-path:url(#SVGID_18_);">
             
-              <image style="overflow:visible;" width="322" height="322" id="Rectangle_31__x2B__Rectangle_28_copie_5_xA0_Image" xlink:href="<?php bloginfo('template_url'); ?>/svg/A7BCA90A794A632F.png"  transform="matrix(0.5256 0 0 0.5256 482.25 2)">
+              <image style="overflow:visible;" width="322" height="322" id="Rectangle_31__x2B__Rectangle_28_copie_5_xA0_Image" xlink:href="<%= asset_path "svg/A7BCA90A794A632F.png" %>"  transform="matrix(0.5256 0 0 0.5256 482.25 2)">
             </image>
           </g>
         </g>
