ajout du copyright au footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -55,7 +55,7 @@
     <div class="col-xs-24 col-md-8 footer-other-link">
       <a href="http://blog.climateriaux.fr">Blog</a> | Condition général d’utilisation & de vente | Mentions légales | Contact
     </div>
-    <div class="col-xs-24 col-md-6 footer-copyright">Copyright 2016 - Climatériaux</div>
+    <div class="col-xs-24 col-md-6 footer-copyright">Copyright © 2016 - Climatériaux</div>
     </div>
   </div>
 </div>
